Refactor execution counts and enhance output messages in the final integrative project notebook

--- a/bloque-3/semana-5/proyecto-final-integrador.ipynb
+++ b/bloque-3/semana-5/proyecto-final-integrador.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "02818ddc",
    "metadata": {},
    "outputs": [
@@ -83,6 +83,11 @@
      "output_type": "stream",
      "text": [
       "Plotly no disponible. Usando solo matplotlib y seaborn.\n",
+      "¡LABORATORIO DE CIENCIA DE DATOS ACTIVADO!\n",
+      "==================================================\n",
+      "Todas las herramientas cargadas correctamente\n",
+      "Listo para el PROYECTO FINAL INTEGRADOR\n",
+      "==================================================\n",
       "¡LABORATORIO DE CIENCIA DE DATOS ACTIVADO!\n",
       "==================================================\n",
       "Todas las herramientas cargadas correctamente\n",
@@ -173,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "3b210598",
    "metadata": {},
    "outputs": [
@@ -357,7 +362,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "7c100b09-3f94-48f8-ba14-e177b727fa35",
+       "ref": "35f7d8be-99f1-42a3-ba9a-c861af47c6e3",
        "rows": [
         [
          "0",
@@ -1047,7 +1052,7 @@
        "[10 rows x 30 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1207,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "c49c8586",
    "metadata": {},
    "outputs": [
@@ -1374,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "31c0d042",
    "metadata": {},
    "outputs": [
@@ -1391,26 +1396,6 @@
       "5. Creando Índices de Valor\n",
       "6. Creando Interacciones Deportivas\n",
       "7. Aplicando Transformaciones\n",
-      "Feature Engineering Completado!\n",
-      "Variables originales: 30\n",
-      "Variables engineered: 26\n",
-      "Total de variables: 56\n",
-      "\n",
-      "Preview de Variables Estrella:\n",
-      "   • eficiencia_gol: 0.750 (promedio)\n",
-      "   • productividad_total: 1.473 (promedio)\n",
-      "   • indice_potencia: 70.402 (promedio)\n",
-      "   • inteligencia_juego: 68.765 (promedio)\n",
-      "   • indice_disciplina: 1.626 (promedio)\n",
-      "   • eficiencia_salarial: 3.481 (promedio)\n",
-      "\n",
-      "Correlación con Rendimiento:\n",
-      "   • eficiencia_salarial: 0.270\n",
-      "   • eficiencia_gol: 0.096\n",
-      "   • inteligencia_juego: 0.078\n",
-      "   • productividad_total: 0.049\n",
-      "   • indice_potencia: 0.043\n",
-      "   • indice_disciplina: -0.021\n",
       "Feature Engineering Completado!\n",
       "Variables originales: 30\n",
       "Variables engineered: 26\n",
@@ -1571,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "b2388220",
    "metadata": {},
    "outputs": [
@@ -1582,6 +1567,24 @@
       "Feature Engineering Simplificado - Versión Funcional\n",
       "=======================================================\n",
       "Creando variables sintéticas básicas...\n",
+      "Feature Engineering básico completado!\n",
+      "Variables nuevas creadas: 10\n",
+      "Total variables: 40\n",
+      "\n",
+      "Distribución de variable objetivo:\n",
+      "target\n",
+      "0     37\n",
+      "1    838\n",
+      "2    338\n",
+      "3    127\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Correlaciones con rendimiento:\n",
+      "   • goles_por_partido: 0.527\n",
+      "   • productividad: 0.695\n",
+      "   • indice_fisico: 0.048\n",
+      "   • indice_tecnico: 0.147\n",
+      "   • exp_por_edad: 0.107\n",
       "Feature Engineering básico completado!\n",
       "Variables nuevas creadas: 10\n",
       "Total variables: 40\n",
@@ -1812,7 +1815,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "490336f2-bd99-4680-8e53-03464272cc36",
+       "ref": "f6187763-5d7d-40cc-adc6-afa97cd38d37",
        "rows": [
         [
          "0",
@@ -2235,7 +2238,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2327,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "21842ac4",
    "metadata": {},
    "outputs": [
@@ -2534,7 +2537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "922ff8cb",
    "metadata": {},
    "outputs": [
@@ -2782,7 +2785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "ab39cee5",
    "metadata": {},
    "outputs": [
