Remove all emojis from configuration and fundamentals notebook - clean professional format

--- a/bloque-1/semana-1/configuracion-fundamentos.ipynb
+++ b/bloque-1/semana-1/configuracion-fundamentos.ipynb
@@ -100,7 +100,10 @@
      "output_type": "stream",
      "text": [
       "Versión de Python: 3.10.12 (main, May 27 2025, 17:12:29) [GCC 11.4.0]\n",
-      "✅ Todas las librerías están instaladas correctamente\n",
+      "Todas las librerías están instaladas correctamente\n",
+      "pandas: 2.3.1\n",
+      "numpy: 2.2.6\n",
+      "Todas las librerías están instaladas correctamente\n",
       "pandas: 2.3.1\n",
       "numpy: 2.2.6\n"
      ]
@@ -116,11 +119,11 @@
     "    import pandas as pd\n",
     "    import numpy as np\n",
     "    import matplotlib.pyplot as plt\n",
-    "    print(\"✅ Todas las librerías están instaladas correctamente\")\n",
+    "    print(\"Todas las librerías están instaladas correctamente\")\n",
     "    print(f\"pandas: {pd.__version__}\")\n",
     "    print(f\"numpy: {np.__version__}\")\n",
     "except ImportError as e:\n",
-    "    print(f\"❌ Error al importar: {e}\")\n",
+    "    print(f\"Error al importar: {e}\")\n",
     "    print(\"Instala las librerías con: pip install pandas numpy matplotlib\")"
    ]
   },
@@ -331,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "f5120291",
    "metadata": {},
    "outputs": [
@@ -448,22 +451,21 @@
    "id": "66222592",
    "metadata": {},
    "source": [
-    "\"## 4. Resumen y Próximos Pasos\n",
-    "\",\n",
+    "## 4. Resumen y Próximos Pasos\n",
     "\n",
     "### Lo que Hemos Aprendido\n",
     "\n",
     "En esta primera semana hemos cubierto:\n",
     "\n",
-    "✅ **Configuración del entorno**: Python, pip, Jupyter Notebook\n",
+    "**Configuración del entorno**: Python, pip, Jupyter Notebook\n",
     "\n",
-    "✅ **Conceptos básicos**: Variables, tipos de datos, operadores\n",
+    "**Conceptos básicos**: Variables, tipos de datos, operadores\n",
     "\n",
-    "✅ **Tipos de datos fundamentales**: int, float, str, bool\n",
+    "**Tipos de datos fundamentales**: int, float, str, bool\n",
     "\n",
-    "✅ **Operaciones básicas**: Aritméticas, comparaciones, strings\n",
+    "**Operaciones básicas**: Aritméticas, comparaciones, strings\n",
     "\n",
-    "✅ **Aplicación práctica**: Análisis básico de datos deportivos\n",
+    "**Aplicación práctica**: Análisis básico de datos deportivos\n",
     "\n",
     "### Próxima Semana\n",
     "\n",
@@ -483,8 +485,7 @@
     "\n",
     "---\n",
     "\n",
-    "    \"**¡Felicitaciones por completar tu primera semana de programación con Python!**\n",
-    "\",\n",
+    "**¡Felicitaciones por completar tu primera semana de programación con Python!**\n",
     "\n",
     "*Recuerda: La programación se aprende practicando. Mientras más código escribas, más cómodo te sentirás.*"
    ]
