Remove all emojis from data structures and control flow notebook - clean professional format

--- a/bloque-1/semana-2/estructuras-control.ipynb
+++ b/bloque-1/semana-2/estructuras-control.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c22ea2b0",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "50fedd57",
    "metadata": {},
    "outputs": [
@@ -572,26 +572,26 @@
       "Manchester City:\n",
       "  Eficiencia: 85.7%\n",
       "  Diferencia de goles: +46\n",
-      "  ✅ Excelente rendimiento\n",
-      "  ⚽ Ataque muy efectivo\n",
+      "  Excelente rendimiento\n",
+      "  Ataque muy efectivo\n",
       "\n",
       "Arsenal:\n",
       "  Eficiencia: 77.4%\n",
       "  Diferencia de goles: +23\n",
-      "  ⚠️ Buen rendimiento\n",
-      "  ⚽ Ataque muy efectivo\n",
+      "  Buen rendimiento\n",
+      "  Ataque muy efectivo\n",
       "\n",
       "Chelsea:\n",
       "  Eficiencia: 53.6%\n",
       "  Diferencia de goles: +4\n",
-      "  ⚠️ Rendimiento regular\n",
-      "  ⚽ Ataque balanceado\n",
+      "  Rendimiento regular\n",
+      "  Ataque balanceado\n",
       "\n",
       "Everton:\n",
       "  Eficiencia: 33.3%\n",
       "  Diferencia de goles: -30\n",
-      "  ❌ Rendimiento deficiente\n",
-      "  🛡️ Serios problemas defensivos\n"
+      "  Rendimiento deficiente\n",
+      "  Serios problemas defensivos\n"
      ]
     }
    ],
@@ -649,22 +649,22 @@
     "    \n",
     "    # Análisis específico\n",
     "    if eficiencia > 80:\n",
-    "        print(f\"  ✅ Excelente rendimiento\")\n",
+    "        print(f\"  Excelente rendimiento\")\n",
     "    elif eficiencia > 60:\n",
-    "        print(f\"  ⚠️ Buen rendimiento\")\n",
+    "        print(f\"  Buen rendimiento\")\n",
     "    elif eficiencia > 40:\n",
-    "        print(f\"  ⚠️ Rendimiento regular\")\n",
+    "        print(f\"  Rendimiento regular\")\n",
     "    else:\n",
-    "        print(f\"  ❌ Rendimiento deficiente\")\n",
+    "        print(f\"  Rendimiento deficiente\")\n",
     "    \n",
     "    if diferencia > 10:\n",
-    "        print(f\"  ⚽ Ataque muy efectivo\")\n",
+    "        print(f\"  Ataque muy efectivo\")\n",
     "    elif diferencia > 0:\n",
-    "        print(f\"  ⚽ Ataque balanceado\")\n",
+    "        print(f\"  Ataque balanceado\")\n",
     "    elif diferencia > -10:\n",
-    "        print(f\"  🛡️ Defensa necesita mejoras\")\n",
+    "        print(f\"  Defensa necesita mejoras\")\n",
     "    else:\n",
-    "        print(f\"  🛡️ Serios problemas defensivos\")"
+    "        print(f\"  Serios problemas defensivos\")"
    ]
   },
   {
@@ -837,18 +837,18 @@
     "\n",
     "En esta segunda semana hemos cubierto:\n",
     "\n",
-    "✅ **Estructuras de datos fundamentales**:\n",
+    "**Estructuras de datos fundamentales**:\n",
     "  - **Listas**: Colecciones ordenadas y modificables\n",
     "  - **Diccionarios**: Datos estructurados con clave-valor\n",
     "  - **Tuplas**: Datos inmutables y ordenados\n",
     "  - **Conjuntos**: Elementos únicos sin orden\n",
     "\n",
-    "✅ **Control de flujo**:\n",
+    "**Control de flujo**:\n",
     "  - **Bucles FOR**: Iteración sobre colecciones\n",
     "  - **Bucles WHILE**: Iteración condicional\n",
     "  - **Condicionales complejos**: if/elif/else anidados\n",
     "\n",
-    "✅ **Aplicaciones prácticas**:\n",
+    "**Aplicaciones prácticas**:\n",
     "  - Gestión de plantillas de equipos\n",
     "  - Análisis de resultados de liga\n",
     "  - Procesamiento de estadísticas deportivas\n",
@@ -888,7 +888,7 @@
     "\n",
     "---\n",
     "\n",
-    "**¡Excelente progreso!** 🎉 Ya puedes manejar datos complejos y crear lógica sofisticada.\n",
+    "**¡Excelente progreso!** Ya puedes manejar datos complejos y crear lógica sofisticada.\n",
     "\n",
     "*Recuerda: Las estructuras de datos son la base de todo análisis. Cuanto mejor las entiendas, más poderosos serán tus análisis.*"
    ]
