Remove all emojis from functions and modules notebook - clean professional format

--- a/bloque-1/semana-3/funciones-modulos.ipynb
+++ b/bloque-1/semana-3/funciones-modulos.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "adc59be4",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "da8de0a5",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "09cd4d2f",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
       "\n",
       "=== REPORTE DE TEMPORADA ===\n",
       "\n",
-      "📊 ESTADÍSTICAS GENERALES:\n",
+      "ESTADÍSTICAS GENERALES:\n",
       "• Total de partidos: 15\n",
       "• Promedio de goles por partido: 2.93\n",
       "• Mediana de goles por partido: 3\n",
@@ -563,13 +563,13 @@
       "• Partido con menos goles: 0\n",
       "• Desviación estándar: 1.71\n",
       "\n",
-      "🏠 VENTAJA LOCAL:\n",
+      "VENTAJA LOCAL:\n",
       "• ¿Hay ventaja local?: Sí\n",
       "• Victorias locales: 40.0%\n",
       "• Empates: 33.3%\n",
       "• Victorias visitantes: 26.7%\n",
       "\n",
-      "📈 DISTRIBUCIÓN DE RESULTADOS:\n",
+      "DISTRIBUCIÓN DE RESULTADOS:\n",
       "• Victoria Local: 6 partidos\n",
       "• Empate: 5 partidos\n",
       "• Victoria Visitante: 4 partidos\n",
@@ -638,8 +638,7 @@
     "    reporte = f\"\"\"\n",
     "=== REPORTE DE TEMPORADA ===\n",
     "\n",
-    "    \"ESTADÍSTICAS GENERALES:\n",
-    "\",,\n",
+    "ESTADÍSTICAS GENERALES:\n",
     "• Total de partidos: {estadisticas['total_partidos']}\n",
     "• Promedio de goles por partido: {estadisticas['promedio_goles_partido']:.2f}\n",
     "• Mediana de goles por partido: {estadisticas['mediana_goles_partido']}\n",
@@ -647,13 +646,13 @@
     "• Partido con menos goles: {estadisticas['min_goles_partido']}\n",
     "• Desviación estándar: {estadisticas['desviacion_estandar']:.2f}\n",
     "\n",
-    "🏠 VENTAJA LOCAL:\n",
+    "VENTAJA LOCAL:\n",
     "• ¿Hay ventaja local?: {'Sí' if estadisticas['ventaja_local'] else 'No'}\n",
     "• Victorias locales: {estadisticas['porcentaje_victorias_local']:.1f}%\n",
     "• Empates: {estadisticas['porcentaje_empates']:.1f}%\n",
     "• Victorias visitantes: {estadisticas['porcentaje_victorias_visitante']:.1f}%\n",
     "\n",
-    "📈 DISTRIBUCIÓN DE RESULTADOS:\n",
+    "DISTRIBUCIÓN DE RESULTADOS:\n",
     "\"\"\"\n",
     "    \n",
     "    for tipo, cantidad in estadisticas['distribucion_resultados'].items():\n",
@@ -685,25 +684,25 @@
     "\n",
     "En esta tercera semana hemos cubierto:\n",
     "\n",
-    "✅ **Conceptos de Funciones**:\n",
+    "**Conceptos de Funciones**:\n",
     "  - **Definición**: Bloques de código reutilizable\n",
     "  - **Parámetros**: Valores de entrada\n",
     "  - **Return**: Valores de salida\n",
     "  - **Documentación**: Docstrings para explicar funciones\n",
     "\n",
-    "✅ **Tipos de Funciones**:\n",
+    "**Tipos de Funciones**:\n",
     "  - **Simples**: Sin parámetros ni retorno\n",
     "  - **Con parámetros**: Reciben datos de entrada\n",
     "  - **Con retorno**: Devuelven resultados\n",
     "  - **Múltiples retornos**: Devuelven varios valores\n",
     "\n",
-    "✅ **Módulos y Librerías**:\n",
+    "**Módulos y Librerías**:\n",
     "  - **Importación**: Diferentes formas de importar\n",
     "  - **Módulos integrados**: math, random, datetime, statistics\n",
     "  - **Alias**: Nombres más cortos para módulos\n",
     "  - **Funciones específicas**: Importar solo lo necesario\n",
     "\n",
-    "✅ **Aplicaciones Deportivas**:\n",
+    "**Aplicaciones Deportivas**:\n",
     "  - **Análisis de rendimiento**: Funciones para evaluar jugadores y equipos\n",
     "  - **Simulaciones**: Crear partidos y torneos aleatorios\n",
     "  - **Estadísticas avanzadas**: Usar módulos para cálculos complejos\n",
@@ -746,18 +745,17 @@
     "\n",
     "### Consejos Importantes\n",
     "\n",
-    "💡 **Naming**: Usa nombres descriptivos para tus funciones (`calcular_promedio` vs `calc`)\n",
+    "**Naming**: Usa nombres descriptivos para tus funciones (`calcular_promedio` vs `calc`)\n",
     "\n",
-    "💡 **Single Responsibility**: Cada función debe hacer una sola cosa bien\n",
+    "**Single Responsibility**: Cada función debe hacer una sola cosa bien\n",
     "\n",
-    "💡 **Documentación**: Siempre documenta qué hace tu función y qué retorna\n",
+    "**Documentación**: Siempre documenta qué hace tu función y qué retorna\n",
     "\n",
-    "💡 **Testing**: Prueba tus funciones con diferentes datos de entrada\n",
+    "**Testing**: Prueba tus funciones con diferentes datos de entrada\n",
     "\n",
     "---\n",
     "\n",
-    "    \"**¡Excelente trabajo!** Ahora puedes crear código organizado y reutilizable.\n",
-    "\",\n",
+    "**¡Excelente trabajo!** Ahora puedes crear código organizado y reutilizable.\n",
     "\n",
     "*Recuerda: Las funciones son la base de la programación profesional. Cuanto mejor las uses, más poderosos serán tus análisis.*"
    ]
