Remove all emojis from pandas-numpy introduction notebook - clean professional format

--- a/bloque-1/semana-4/pandas-numpy-introduccion.ipynb
+++ b/bloque-1/semana-4/pandas-numpy-introduccion.ipynb
@@ -48,11 +48,11 @@
     "### Lo que Lograremos Hoy\n",
     "\n",
     "Al final de esta sesión, podrás:\n",
-    "- ✅ Crear y manipular arrays de NumPy\n",
-    "- ✅ Construir DataFrames con datos deportivos\n",
-    "- ✅ Leer archivos CSV de resultados deportivos\n",
-    "- ✅ Realizar análisis básicos (promedios, filtros, agrupaciones)\n",
-    "- ✅ Preparar datos para visualización y análisis avanzado"
+    "- Crear y manipular arrays de NumPy\n",
+    "- Construir DataFrames con datos deportivos\n",
+    "- Leer archivos CSV de resultados deportivos\n",
+    "- Realizar análisis básicos (promedios, filtros, agrupaciones)\n",
+    "- Preparar datos para visualización y análisis avanzado"
    ]
   },
   {
@@ -67,10 +67,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "26a1c9c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy instalado correctamente!\n",
+      "Versión de NumPy: 2.2.6\n",
+      "Pandas disponible - Versión: 2.3.1\n",
+      "\n",
+      "==================================================\n",
+      "LISTO PARA ANALIZAR DATOS DEPORTIVOS\n",
+      "==================================================\n",
+      "Pandas disponible - Versión: 2.3.1\n",
+      "\n",
+      "==================================================\n",
+      "LISTO PARA ANALIZAR DATOS DEPORTIVOS\n",
+      "==================================================\n"
+     ]
+    }
+   ],
    "source": [
     "# Importar NumPy\n",
     "import numpy as np\n",
@@ -83,10 +102,10 @@
     "    import pandas as pd\n",
     "    print(f\"Pandas disponible - Versión: {pd.__version__}\")\n",
     "except ImportError:\n",
-    "    print(\"⚠️ Pandas no está instalado. Necesitaremos instalarlo.\")\n",
+    "    print(\"Pandas no está instalado. Necesitaremos instalarlo.\")\n",
     "\n",
     "print(\"\\n\" + \"=\"*50)\n",
-    "print(\"🏆 LISTO PARA ANALIZAR DATOS DEPORTIVOS\")\n",
+    "print(\"LISTO PARA ANALIZAR DATOS DEPORTIVOS\")\n",
     "print(\"=\"*50)"
    ]
   },
@@ -100,10 +119,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9b9c384f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== ARRAYS DESDE LISTAS ===\n",
+      "Goles a favor: [2 1 3 0 2 1 4 2 1 3]\n",
+      "Tipo de dato: <class 'numpy.ndarray'>\n",
+      "Forma del array: (10,)\n",
+      "Goles en contra: [1 1 2 1 0 2 1 1 2 0]\n",
+      "\n",
+      "=== INFORMACIÓN DEL ARRAY ===\n",
+      "Número de elementos: 10\n",
+      "Número de dimensiones: 1\n",
+      "Tipo de datos: int64\n",
+      "\n",
+      "=== ARRAYS ESPECIALES ===\n",
+      "Nueva temporada (38 partidos): [0. 0. 0. 0. 0.]...\n",
+      "Partidos jugados: [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "Números de jornada: [ 1  2  3  4  5  6  7  8  9 10]\n",
+      "Marcas de tiempo: [ 0.  5. 10. 15. 20.]...\n"
+     ]
+    }
+   ],
    "source": [
     "# Crear arrays desde listas - Datos deportivos\n",
     "print(\"=== ARRAYS DESDE LISTAS ===\")\n",
@@ -230,10 +272,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "172c3f2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== CREANDO SERIES ===\n",
+      "Goles por jugador:\n",
+      "Messi          25\n",
+      "Benzema        18\n",
+      "Lewandowski    12\n",
+      "Haaland         8\n",
+      "Mbappé         15\n",
+      "dtype: int64\n",
+      "\n",
+      "Tipo de objeto: <class 'pandas.core.series.Series'>\n",
+      "Índice: ['Messi', 'Benzema', 'Lewandowski', 'Haaland', 'Mbappé']\n",
+      "Valores: [25 18 12  8 15]\n",
+      "\n",
+      "========================================\n",
+      "Tabla de posiciones (puntos):\n",
+      "Real Madrid        88\n",
+      "Barcelona          85\n",
+      "Atletico Madrid    78\n",
+      "Sevilla            70\n",
+      "Real Sociedad      65\n",
+      "dtype: int64\n",
+      "\n",
+      "=== OPERACIONES CON SERIES ===\n",
+      "Máximo goleador: 25 goles (Messi)\n",
+      "Promedio de goles: 15.6\n",
+      "Total de goles: 78\n",
+      "\n",
+      "Goles de Messi: 25\n",
+      "Goles del top 3: 55\n",
+      "\n",
+      "Goleadores con 15+ goles:\n",
+      "Messi      25\n",
+      "Benzema    18\n",
+      "Mbappé     15\n",
+      "dtype: int64\n",
+      "\n",
+      "Promedio por partido:\n",
+      "Messi          0.83\n",
+      "Benzema        0.60\n",
+      "Lewandowski    0.40\n",
+      "Haaland        0.27\n",
+      "Mbappé         0.50\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Importar Pandas\n",
     "import pandas as pd\n",
@@ -477,7 +569,7 @@
     "\n",
     "# Guardar como CSV\n",
     "df_partidos.to_csv('partidos_liga.csv', index=False)\n",
-    "print(\"✅ Archivo 'partidos_liga.csv' creado exitosamente\")\n",
+    "print(\"Archivo 'partidos_liga.csv' creado exitosamente\")\n",
     "\n",
     "print(\"\\nPrimeros 5 partidos:\")\n",
     "print(df_partidos.head())"
@@ -504,7 +596,7 @@
     "# Leer el archivo que acabamos de crear\n",
     "df_liga = pd.read_csv('partidos_liga.csv')\n",
     "\n",
-    "print(\"✅ Archivo CSV leído exitosamente\")\n",
+    "print(\"Archivo CSV leído exitosamente\")\n",
     "print(f\"Dimensiones del dataset: {df_liga.shape}\")\n",
     "\n",
     "# Información básica del dataset\n",
@@ -562,19 +654,19 @@
     "\n",
     "En esta cuarta semana hemos cubierto las librerías fundamentales para análisis de datos:\n",
     "\n",
-    "✅ **NumPy - Computación Numérica**:\n",
+    "**NumPy - Computación Numérica**:\n",
     "  - **Arrays eficientes**: Estructuras de datos optimizadas para cálculos\n",
     "  - **Operaciones vectorizadas**: Cálculos rápidos en arrays completos\n",
     "  - **Funciones matemáticas**: Estadísticas, agregaciones, operaciones lógicas\n",
     "  - **Aplicaciones deportivas**: Análisis de goles, estadísticas, rendimiento\n",
     "\n",
-    "✅ **Pandas - Análisis de Datos**:\n",
+    "**Pandas - Análisis de Datos**:\n",
     "  - **Series**: Datos unidimensionales con índice\n",
     "  - **DataFrames**: Datos tabulares como hojas de cálculo\n",
     "  - **Operaciones básicas**: Filtrado, agrupación, agregación\n",
     "  - **Lectura de archivos**: Importar datos desde CSV\n",
     "\n",
-    "✅ **Flujo de Trabajo**:\n",
+    "**Flujo de Trabajo**:\n",
     "  - **Importar datos**: Leer archivos CSV con `pd.read_csv()`\n",
     "  - **Explorar datos**: `.info()`, `.describe()`, `.head()`\n",
     "  - **Limpiar datos**: Filtros, nuevas columnas, transformaciones\n",
@@ -598,7 +690,7 @@
     "\n",
     "Con estas habilidades fundamentales, ya estás preparado para:\n",
     "\n",
-    "🚀 **Bloque 1 - Fundamentos de Ciencia de Datos y Fútbol**:\n",
+    "**Bloque 1 - Fundamentos de Ciencia de Datos y Fútbol**:\n",
     "  - Trabajar con datasets reales de fútbol\n",
     "  - Realizar análisis estadísticos avanzados\n",
     "  - Crear visualizaciones de datos deportivos\n",
@@ -607,16 +699,16 @@
     "### Habilidades Desarrolladas\n",
     "\n",
     "**Técnicas**:\n",
-    "- ✅ Manipulación eficiente de datos numéricos\n",
-    "- ✅ Importación y exploración de datasets\n",
-    "- ✅ Filtrado y agregación de información\n",
-    "- ✅ Creación de métricas y variables derivadas\n",
+    "- Manipulación eficiente de datos numéricos\n",
+    "- Importación y exploración de datasets\n",
+    "- Filtrado y agregación de información\n",
+    "- Creación de métricas y variables derivadas\n",
     "\n",
     "**Analíticas**:\n",
-    "- ✅ Cálculo de estadísticas deportivas básicas\n",
-    "- ✅ Identificación de patrones en resultados\n",
-    "- ✅ Comparación de rendimiento entre equipos\n",
-    "- ✅ Análisis de distribuciones de goles\n",
+    "- Cálculo de estadísticas deportivas básicas\n",
+    "- Identificación de patrones en resultados\n",
+    "- Comparación de rendimiento entre equipos\n",
+    "- Análisis de distribuciones de goles\n",
     "\n",
     "### Próxima Semana: Visualización Básica\n",
     "\n",
@@ -640,27 +732,27 @@
     "\n",
     "### Recursos Adicionales\n",
     "\n",
-    "📚 **Documentación Oficial**:\n",
+    "**Documentación Oficial**:\n",
     "- [NumPy Documentation](https://numpy.org/doc/)\n",
     "- [Pandas Documentation](https://pandas.pydata.org/docs/)\n",
     "\n",
-    "🎯 **Práctica Extra**:\n",
+    "**Práctica Extra**:\n",
     "- [Kaggle Learn - Pandas](https://www.kaggle.com/learn/pandas)\n",
     "- [10 minutes to pandas](https://pandas.pydata.org/pandas-docs/stable/user_guide/10min.html)\n",
     "\n",
     "### Consejos Importantes\n",
     "\n",
-    "💡 **Performance**: NumPy es hasta 100x más rápido que listas de Python\n",
+    "**Performance**: NumPy es hasta 100x más rápido que listas de Python\n",
     "\n",
-    "💡 **Memoria**: Pandas maneja eficientemente datasets de millones de filas\n",
+    "**Memoria**: Pandas maneja eficientemente datasets de millones de filas\n",
     "\n",
-    "💡 **Integración**: Estas librerías son la base de todo el ecosistema de ciencia de datos\n",
+    "**Integración**: Estas librerías son la base de todo el ecosistema de ciencia de datos\n",
     "\n",
-    "💡 **Práctica**: Cuanto más uses estas herramientas, más natural se volverán\n",
+    "**Práctica**: Cuanto más uses estas herramientas, más natural se volverán\n",
     "\n",
     "---\n",
     "\n",
-    "**¡Excelente trabajo!** 🎉 Ya tienes las herramientas fundamentales para analizar datos deportivos.\n",
+    "**¡Excelente trabajo!** Ya tienes las herramientas fundamentales para analizar datos deportivos.\n",
     "\n",
     "*Recuerda: NumPy y Pandas son como el balón y el campo de fútbol - esenciales para jugar el juego de la ciencia de datos.*"
    ]
@@ -673,7 +765,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.12"
   }
  },
