Remove all emojis from basic visualization notebook - clean professional format

--- a/bloque-1/semana-5/visualizacion-basica.ipynb
+++ b/bloque-1/semana-5/visualizacion-basica.ipynb
@@ -69,8 +69,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ ¡Listo para hacer gráficos bonitos!\n",
-      "🎨 Seaborn hará que nuestros gráficos se vean increíbles\n"
+      "¡Listo para hacer gráficos bonitos!\n",
+      "Seaborn hará que nuestros gráficos se vean increíbles\n"
      ]
     }
    ],
@@ -83,8 +83,8 @@
     "sns.set_theme()\n",
     "\n",
     "# Verificar que todo funcione\n",
-    "print(\"✅ ¡Listo para hacer gráficos bonitos!\")\n",
-    "print(\"🎨 Seaborn hará que nuestros gráficos se vean increíbles\")"
+    "print(\"¡Listo para hacer gráficos bonitos!\")\n",
+    "print(\"Seaborn hará que nuestros gráficos se vean increíbles\")"
    ]
   },
   {
@@ -124,9 +124,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🎉 ¡Hiciste tu primer gráfico!\n",
-      "📊 ¡Mira qué bonito se ve con seaborn!\n",
-      "🌈 Los colores son automáticos y profesionales\n"
+      "¡Hiciste tu primer gráfico!\n",
+      "¡Mira qué bonito se ve con seaborn!\n",
+      "Los colores son automáticos y profesionales\n"
      ]
     }
    ],
@@ -144,9 +144,9 @@
     "# Mostrar el gráfico\n",
     "plt.show()\n",
     "\n",
-    "print(\"🎉 ¡Hiciste tu primer gráfico!\")\n",
-    "print(\"📊 ¡Mira qué bonito se ve con seaborn!\")\n",
-    "print(\"🌈 Los colores son automáticos y profesionales\")"
+    "print(\"¡Hiciste tu primer gráfico!\")\n",
+    "print(\"¡Mira qué bonito se ve con seaborn!\")\n",
+    "print(\"Los colores son automáticos y profesionales\")"
    ]
   },
   {
@@ -183,9 +183,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🌈 ¡Seaborn eligió colores increíbles automáticamente!\n",
-      "✨ La paleta 'viridis' es muy popular en ciencia de datos\n",
-      "🎯 ¡Con una línea de código obtuvimos un gráfico profesional!\n"
+      "¡Seaborn eligió colores increíbles automáticamente!\n",
+      "La paleta 'viridis' es muy popular en ciencia de datos\n",
+      "¡Con una línea de código obtuvimos un gráfico profesional!\n"
      ]
     }
    ],
@@ -206,9 +206,9 @@
     "# Mostrar el gráfico\n",
     "plt.show()\n",
     "\n",
-    "print(\"🌈 ¡Seaborn eligió colores increíbles automáticamente!\")\n",
-    "print(\"✨ La paleta 'viridis' es muy popular en ciencia de datos\")\n",
-    "print(\"🎯 ¡Con una línea de código obtuvimos un gráfico profesional!\")"
+    "print(\"¡Seaborn eligió colores increíbles automáticamente!\")\n",
+    "print(\"La paleta 'viridis' es muy popular en ciencia de datos\")\n",
+    "print(\"¡Con una línea de código obtuvimos un gráfico profesional!\")"
    ]
   },
   {
@@ -247,9 +247,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📈 ¡Mira qué línea tan bonita hizo seaborn!\n",
-      "🔵 Los puntos y la línea se ven súper profesionales\n",
-      "✨ Seaborn hace que todo se vea mejor automáticamente\n"
+      "¡Mira qué línea tan bonita hizo seaborn!\n",
+      "Los puntos y la línea se ven súper profesionales\n",
+      "Seaborn hace que todo se vea mejor automáticamente\n"
      ]
     }
    ],
@@ -269,9 +269,9 @@
     "# Mostrar el gráfico\n",
     "plt.show()\n",
     "\n",
-    "print(\"📈 ¡Mira qué línea tan bonita hizo seaborn!\")\n",
-    "print(\"🔵 Los puntos y la línea se ven súper profesionales\")\n",
-    "print(\"✨ Seaborn hace que todo se vea mejor automáticamente\")"
+    "print(\"¡Mira qué línea tan bonita hizo seaborn!\")\n",
+    "print(\"Los puntos y la línea se ven súper profesionales\")\n",
+    "print(\"Seaborn hace que todo se vea mejor automáticamente\")"
    ]
   },
   {
@@ -304,9 +304,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⚽ ¡Excelente! Hiciste un gráfico de Mi Equipo Favorito\n",
-      "💡 Intenta cambiar los números y el nombre del equipo\n",
-      "🎨 ¡Seaborn hace que todo se vea increíble sin esfuerzo!\n"
+      "¡Excelente! Hiciste un gráfico de Mi Equipo Favorito\n",
+      "Intenta cambiar los números y el nombre del equipo\n",
+      "¡Seaborn hace que todo se vea increíble sin esfuerzo!\n"
      ]
     }
    ],
@@ -327,9 +327,9 @@
     "# Seaborn ya tiene una grilla bonita automáticamente\n",
     "plt.show()\n",
     "\n",
-    "print(f\"⚽ ¡Excelente! Hiciste un gráfico de {mi_equipo}\")\n",
-    "print(\"💡 Intenta cambiar los números y el nombre del equipo\")\n",
-    "print(\"🎨 ¡Seaborn hace que todo se vea increíble sin esfuerzo!\")"
+    "print(f\"¡Excelente! Hiciste un gráfico de {mi_equipo}\")\n",
+    "print(\"Intenta cambiar los números y el nombre del equipo\")\n",
+    "print(\"¡Seaborn hace que todo se vea increíble sin esfuerzo!\")"
    ]
   },
   {
@@ -337,22 +337,22 @@
    "id": "53dabedc",
    "metadata": {},
    "source": [
-    "## 6. ¡Felicitaciones! 🎉\n",
+    "## 6. ¡Felicitaciones!\n",
     "\n",
     "### Lo que Aprendiste Hoy\n",
     "\n",
-    "✅ **Seaborn**: La herramienta que hace gráficos bonitos automáticamente  \n",
-    "✅ **Gráficos de barras**: Para comparar equipos con `sns.barplot()`  \n",
-    "✅ **Gráficos de líneas**: Para ver cambios con `sns.lineplot()`  \n",
-    "✅ **Paletas de colores**: Colores profesionales sin esfuerzo  \n",
-    "✅ **Tu primer gráfico**: ¡Ya sabes hacer visualizaciones increíbles!\n",
+    "**Seaborn**: La herramienta que hace gráficos bonitos automáticamente  \n",
+    "**Gráficos de barras**: Para comparar equipos con `sns.barplot()`  \n",
+    "**Gráficos de líneas**: Para ver cambios con `sns.lineplot()`  \n",
+    "**Paletas de colores**: Colores profesionales sin esfuerzo  \n",
+    "**Tu primer gráfico**: ¡Ya sabes hacer visualizaciones increíbles!\n",
     "\n",
     "### ¿Por qué Seaborn es Genial?\n",
     "\n",
-    "- 🎨 **Colores automáticos**: No tienes que elegir\n",
-    "- ✨ **Estilo profesional**: Se ve como gráficos de TV deportiva\n",
-    "- 🚀 **Súper fácil**: Menos código, mejores resultados\n",
-    "- 📊 **Moderno**: Lo que usan los analistas profesionales\n",
+    "- **Colores automáticos**: No tienes que elegir\n",
+    "- **Estilo profesional**: Se ve como gráficos de TV deportiva\n",
+    "- **Súper fácil**: Menos código, mejores resultados\n",
+    "- **Moderno**: Lo que usan los analistas profesionales\n",
     "\n",
     "### ¿Qué Sigue?\n",
     "\n",
@@ -370,7 +370,7 @@
     "- `plt.title()` → Agregar título\n",
     "- `plt.show()` → Mostrar el gráfico\n",
     "\n",
-    "**¡Ya eres capaz de hacer gráficos profesionales con Python y Seaborn!** 🌟\n",
+    "**¡Ya eres capaz de hacer gráficos profesionales con Python y Seaborn!**\n",
     "\n",
     "---\n",
     "\n",
