Remove emojis from estadistica-descriptiva.ipynb for professional formatting
- Cleaned header removing chart and checkmark emojis
- Updated theory section removing trophy, trending, and target emojis
- Cleaned configuration section removing art palette and lightning emojis
- Updated final section removing party and checkmark emojis
- Preserved all educational content about descriptive statistics
- Maintained functionality: data analysis and visualization examples intact

--- a/bloque-2/semana-3/estadistica-descriptiva.ipynb
+++ b/bloque-2/semana-3/estadistica-descriptiva.ipynb
@@ -9,21 +9,21 @@
     "\n",
     "## Ciencia de Datos en el Deporte - Fundamentos con Python\n",
     "\n",
-    "### 📊 **Bloque 2: Análisis de Datos Deportivos**\n",
+    "### **Bloque 2: Análisis de Datos Deportivos**\n",
     "\n",
     "---\n",
     "\n",
     "**Objetivos de Aprendizaje:**\n",
-    "- ✅ Entender qué es estadística básica\n",
-    "- ✅ Calcular promedios y máximos\n",
-    "- ✅ Crear gráficos simples con seaborn\n",
-    "- ✅ Comparar datos de jugadores\n",
+    "- Entender qué es estadística básica\n",
+    "- Calcular promedios y máximos\n",
+    "- Crear gráficos simples con seaborn\n",
+    "- Comparar datos de jugadores\n",
     "\n",
     "**Herramientas:**\n",
-    "- 🐍 Python\n",
-    "- 📊 Pandas (datos)\n",
-    "- 🎨 Seaborn (gráficos bonitos)\n",
-    "- 🔢 NumPy (cálculos)"
+    "- Python\n",
+    "- Pandas (datos)\n",
+    "- Seaborn (gráficos bonitos)\n",
+    "- NumPy (cálculos)"
    ]
   },
   {
@@ -39,10 +39,10 @@
     "\n",
     "### ¿Por qué es útil en el fútbol?\n",
     "\n",
-    "- 📊 **Ver quién es mejor**: ¿Qué jugador anota más goles?\n",
-    "- 🏆 **Comparar equipos**: ¿Qué posición es más efectiva?\n",
-    "- 📈 **Entender tendencias**: ¿Los delanteros jóvenes anotan más?\n",
-    "- 🎯 **Tomar decisiones**: ¿A quién fichamos?\n",
+    "- **Ver quién es mejor**: ¿Qué jugador anota más goles?\n",
+    "- **Comparar equipos**: ¿Qué posición es más efectiva?\n",
+    "- **Entender tendencias**: ¿Los delanteros jóvenes anotan más?\n",
+    "- **Tomar decisiones**: ¿A quién fichamos?\n",
     "\n",
     "### Medidas Importantes\n",
     "\n",
@@ -79,14 +79,14 @@
     "- **Matplotlib**: Para mostrar los gráficos\n",
     "\n",
     "### ¿Por qué Seaborn?\n",
-    "- 🎨 Gráficos bonitos automáticamente\n",
-    "- 📊 Ideal para estadística\n",
-    "- ⚡ Menos código para gráficos más informativos"
+    "- Gráficos bonitos automáticamente\n",
+    "- Ideal para estadística\n",
+    "- Menos código para gráficos más informativos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6d42196d",
    "metadata": {},
    "outputs": [
@@ -356,14 +356,14 @@
     "\n",
     "### 5.1 Lo que Aprendimos\n",
     "\n",
-    "- ✅ Crear datos simples de jugadores\n",
-    "- ✅ Calcular promedios, máximos y mínimos\n",
-    "- ✅ Hacer gráficos bonitos con seaborn\n",
-    "- ✅ Comparar jugadores por posición\n",
+    "- Crear datos simples de jugadores\n",
+    "- Calcular promedios, máximos y mínimos\n",
+    "- Hacer gráficos bonitos con seaborn\n",
+    "- Comparar jugadores por posición\n",
     "\n",
     "### 5.2 ¡Lo Lograste!\n",
     "\n",
-    "🎉 ¡Felicitaciones! Ahora sabes:\n",
+    "¡Felicitaciones! Ahora sabes:\n",
     "- Crear datos de fútbol\n",
     "- Calcular estadísticas básicas \n",
     "- Hacer gráficos con seaborn\n",
